# rim

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  WARP.md  analyze_root_cluster.py  analyze_sectors.py  mkfs_test.sh
.github/workflows/: ci.yml  release.yml
rimfs/: Cargo.toml  README.md
rimfs/benches/: exfat_bench.rs  ext4_bench.rs  fat32_bench.rs
rimfs/examples/: exfat_example.rs  ext4_example.rs  fat32_example.rs  generate_test_data.rs
rimfs/src/: lib.rs
rimfs/src/core/: allocator.rs  checker.rs  cursor.rs  error.rs  errors.rs  fat.rs  filesystem.rs  formatter.rs  injector.rs  macros.rs  meta.rs  mod.rs  validate.rs
rimfs/src/core/allocator/: chain_allocator.rs
rimfs/src/core/checker/: mod.rs  stats.rs  tracker.rs  types.rs
rimfs/src/core/parser/: mod.rs  node.rs  parser_std.rs
rimfs/src/core/resolver/: attr.rs  mod.rs  node.rs  std_resolver.rs
rimfs/src/core/utils/: bitmap.rs  checksum_utils.rs  exists_utils.rs  fs_utils.rs  mod.rs  path_utils.rs  stream_copy.rs  time_utils.rs  volume.rs  volume_utils.rs
rimfs/src/fs/: mod.rs
rimfs/src/fs/exfat/: allocator.rs  attr.rs  checker.rs  constant.rs  filesystem.rs  formatter.rs  injector.rs  meta.rs  mod.rs  ops.rs  parser.rs  resolver.rs  upcase.rs  utils.rs
rimfs/src/fs/exfat/checker/: walker.rs
rimfs/src/fs/exfat/constant/: boot_sectors.rs  mod.rs  upcase.rs
rimfs/src/fs/exfat/types/: boot.rs  entries.rs  flags.rs  mod.rs  root.rs
rimfs/src/fs/ext4/: allocator.rs  attr.rs  builder.rs  checker.rs  constant.rs  encoder.rs  filesystem.rs  formater.rs  formatter.rs  group_layout.rs  injector.rs  meta.rs  mod.rs  old.rs  params.rs  resolver.rs  utils.rs
rimfs/src/fs/ext4/checker/: walker.rs
rimfs/src/fs/ext4/types/: bgdt.rs  bgdt_update.rs  dirent.rs  extent.rs  inode.rs  lost_found.rs  mod.rs  superblock.rs
rimfs/src/fs/fat32/: allocator.rs  attr.rs  checker.rs  constant.rs  filesystem.rs  formatter.rs  injector.rs  meta.rs  mod.rs  ops.rs  parser.rs  resolver.rs  utils.rs
rimfs/src/fs/fat32/checker/: boot.rs  fat.rs  mod.rs  walker.rs
rimfs/src/fs/fat32/types/: boot.rs  entries.rs  mod.rs
rimfs/test_data/: long_named_file_for_testing_fat32_long_filename_support.txt
rimfs/test_data/deep/deeper/deeper2/deeper3/: deep_file.txt
rimfs/test_data/many_files/: file_007.txt  file_011.txt  file_014.txt  file_016.txt  file_017.txt  file_020.txt  file_023.txt  file_024.txt  file_026.txt  file_028.txt  file_029.txt  file_030.txt  file_031.txt  file_032.txt  file_036.txt  file_040.txt  file_043.txt  file_044.txt  file_046.txt  file_048.txt  file_049.txt  file_052.txt  file_054.txt  file_055.txt  file_057.txt  file_060.txt  file_064.txt  file_065.txt  file_066.txt  file_073.txt  file_076.txt  file_077.txt  file_078.txt  file_079.txt  file_081.txt  file_084.txt  file_086.txt  file_087.txt  file_090.txt  file_091.txt  (+5 more)
rimfs/test_data/subdir1/: file1.txt
rimfs/tests/: fat32_validation_test.rs
rimgen/: Cargo.toml  README.md
rimgen-layout/: Cargo.toml
rimgen-layout/src/: error.rs  filesytem.rs  layout.rs  lib.rs  partition.rs  size.rs
rimgen-output/: Cargo.toml
rimgen-output/src/: constants.rs  helpers.rs  img.rs  lib.rs  vhd.rs
rimgen-scripts/: Cargo.toml
rimgen-scripts/src/: args.rs  cmd_builder.rs  main.rs
rimgen-scripts/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
rimgen/layout/: layout.toml
rimgen/layout/data/many_files/: file_000.txt  file_006.txt  file_008.txt  file_009.txt  file_012.txt  file_013.txt  file_015.txt  file_018.txt  file_019.txt  file_021.txt  file_022.txt  file_025.txt  file_027.txt  file_033.txt  file_034.txt  file_035.txt  file_037.txt  file_038.txt  file_039.txt  file_041.txt  file_042.txt  file_045.txt  file_047.txt  file_050.txt  file_051.txt  file_053.txt  file_056.txt  file_058.txt  file_059.txt  file_061.txt  file_062.txt  file_063.txt  file_067.txt  file_068.txt  file_069.txt  file_070.txt  file_071.txt  file_072.txt  file_074.txt  file_075.txt  (+9 more)
rimgen/layout/data/subdir1/: file2.txt
rimgen/layout/data/subdir2/deep_dir/: deep_file.txt
rimgen/layout/data/test/: new.txt
rimgen/layout/efi/boot/: bootx64.efi
rimgen/src/: main.rs  output.rs
rimgen/src/host/: cmd_builder.rs  linux.rs  macos.rs  macros.rs  mod.rs  windows.rs
rimgen/src/layout/: constants.rs  error.rs  filesystem.rs  layout.rs  mod.rs  partition.rs  size.rs
rimgen/src/utils/: log.rs  mod.rs  progress.rs  string.rs
rimio/: Cargo.toml  README.md
rimio/src/: error.rs  errors.rs  lib.rs  macros.rs  mem.rs  stats.rs  std.rs  uefi.rs  utils.rs
rimpart/: Cargo.toml  README.md
rimpart/benches/: gpt_crc_stream_bench.rs
rimpart/examples/: gpt_example.rs
rimpart/src/: error.rs  errors.rs  gpt.rs  gpt_cursor.rs  gpt_stream.rs  guids.rs  io_ext.rs  lib.rs  macros.rs  mbr.rs  scanner.rs  types.rs  utils.rs
sector-analyzer/: Cargo.toml
sector-analyzer/src/: main.rs
