[workspace]
resolver = "3"

members = [
    "rimgen",
    "rimfs",
    "rimpart",
    "rimio",
]

default-members = ["rimgen", "rimfs"]

[workspace.package]
version = "0.5.1"
edition = "2024"
license = "MIT"
authors = ["Killian Massa (Mki) <contact@mki.dev>"]
repository = "https://github.com/mkidv/rim"
homepage = "https://github.com/mkidv/rim"
keywords = ["fat32", "exfat", "ext4", "gpt", "disk-image"]
categories = ["filesystem", "embedded", "no-std", "development-tools"]
