[package]
name = "rimgen-output"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
alloc = []
std = []

[dependencies]
anyhow = "1.0.98"
rimpart = { path ="../rimpart"}
rimfs = { path = "../rimfs" }
rimio = { path = "../rimio" }
rimgen-layout = { path = "../rimgen-layout" }
tempfile = "3.20.0"
time = { version = "0.3.41", default-features = false, features = [
    "local-offset",
] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
