[package]
name = "rimgen-scripts"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rimgen-scripts"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
rimgen-layout = { path = "../rimgen-layout" }
rimgen-output = { path = "../rimgen-output" }
tempfile = "3.20.0"
which = "8.0.0"
