[package]
name = "rimgen"
description = "Rim generator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

# [lib]
# name = "rimgen"
# path = "src/lib.rs"

[[bin]]
name = "rimgen"
path = "src/main.rs"

[features]
default = ["host-scripts"]
host-scripts = ["which"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
indicatif = "0.17.8"
rimio = { path = "../rimio" }
rimpart = { path = "../rimpart" }
rimfs = { path = "../rimfs" }
tempfile = { version = "3.20.0" }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.7"
time = { version = "0.3.41", default-features = false, features = ["std"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
which = { version = "8.0.0", optional = true }
zerocopy = { version = "0.8.25", default-features = false, features = [
    "derive",
] }
colored = "3.1.1"
