[package]
name = "rimio"
description = "Block IO abstraction for RIM ecosystem"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["mem"]
std   = ["alloc"]
alloc = ["zerocopy/alloc"]
mem   = []
uefi  = ["dep:uefi", "alloc"]

[dependencies]
paste = "1.0.15"
uefi = { version = "0.35", optional = true }
zerocopy = { version = "0.8.25", default-features = false }

[dev-dependencies]
tempfile = "3.20"
