[package]
name = "rimio"
description = "IO abstraction for RIM ecosystem"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["std"]
alloc = ["zerocopy/alloc"]
mem   = []
std   = ["alloc"]
uefi  = ["dep:uefi"]

[dependencies]
paste = "1.0.15"
uefi = { version = "0.35", optional = true }
zerocopy = { version = "0.8.25", default-features = false }

[dev-dependencies]
tempfile = "3.20"
